<resources>
    <string name="app_name">Personal Area LSPU</string>
    <string name="title_activity_drawer" translatable="false">DrawerActivity</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="nav_header_title">Personal Area</string>
    <string name="nav_header_subtitle" translatable="false">lspu-lipetsk.ru</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_news">News</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_messages">Messages</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="remember">Remember</string>
    <string name="log_out">Log Out</string>
    <string name="language">Language:</string>

    <string name="popup_exit_msg">Do you want to log out?</string>
    <string name="popup_exit_title">Log out?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="settings_general">General</string>
    <string name="menu_about">About App</string>
    <string name="version">Version:</string>
    <string name="copyright" translatable="false">Copyright 2021 by Lipetsk State Pedagogical University</string>
    <string name="authors">Authors: Toneyev Anton and Skudnev Dmitriy</string>
    <string name="dark_mode">Dark mode:</string>

</resources>