<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_schedule">

    <fragment
        android:id="@+id/nav_news"
        android:name="com.anton.lspu.account.ui.news.NewsFragment"
        android:label="@string/menu_news"
        tools:layout="@layout/fragment_news" />

    <fragment
        android:id="@+id/nav_schedule"
        android:name="com.anton.lspu.account.ui.schedule.ScheduleFragment"
        android:label="@string/menu_schedule"
        tools:layout="@layout/fragment_schedule" />

    <fragment
        android:id="@+id/nav_messages"
        android:name="com.anton.lspu.account.ui.messages.MessagesFragment"
        android:label="@string/menu_messages"
        tools:layout="@layout/fragment_messages" />
    <fragment
        android:id="@+id/nav_about"
        android:name="com.anton.lspu.account.ui.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about"/>
</navigation>