<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".ui.AboutFragment">

    <ImageView
        android:id="@+id/coat_of_arms_about"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/nav_header_desc"
        app:srcCompat="@drawable/coatofarms_lspu_blue" />


    <TextView
        android:id="@+id/versiontext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/version"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/authortext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/authors"
        android:textAlignment="center"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/copyrighttext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/copyright"
        android:textAlignment="center" />
</LinearLayout>